Docs edited and docker support

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,9 @@ theme:
 nav:
   - Home: index.md
   - Getting Started: getting-started.md
-  - API: api.md
+  - API:
+    - salary: api_salary.md  
+    - main: api_main.md
 
 plugins:
     - mkdocstrings
