Correccion del estatuto branche en mkdocs.yml

--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -3,7 +3,7 @@ name: Deploy MkDocs documentation
 on:
   push:
     branches:
-      - main  # o la rama que uses para desplegar
+      - '**'  # Ejecuta en todos los branches al hacer push
 
 jobs:
   deploy:
