--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mkdocs mkdocs-material  # o los plugins que uses
+        pip install mkdocs mkdocs-material mkdocstrings 
 
     - name: Build MkDocs site
       run: mkdocs build
